bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value finished
finished = false
^BDR:5: error: not found: value isOverR
  if (isOverR()){
      ^BDR:9: error: not found: value isOverL
  else if (isOverL()){
           ^BDR:13: error: not found: value isOverI
  else if (isOverI()){
           ^BDR:18: error: not found: value isOverB
  else if (isOverB()){
           ^BDR:23: error: not found: value isOverC
  else if (isOverC()){
           ^BDR:28: error: not found: value isOverZ
  else if (isOverZ()){
           ^BDR:31: error: not found: value isOverY
  else if (isOverY()){
           ^BDR:35: error: not found: value isOverX
  else if(isOverX()){
          ^